fixed background visible after canceling animation

--- a/src/scss/Modal.scss
+++ b/src/scss/Modal.scss
@@ -117,10 +117,10 @@
     }
     &-backdrop {
       &--show {
-        animation: fadeIn 200ms linear both;
+        animation: fadeIn 300ms linear both;
       }
       &--hide {
-        animation: fadeOut 200ms linear both;
+        animation: fadeOut 300ms linear both;
       }
     }
     &--cancel {
